# esp32-course

./: .gitignore  ESP32 As A Server.pptx  ESP32 sleep modes.pptx  Installing the idf.pptx  MQTT.pptx  Memmory.pptx  Rest Services Explained.pptx  SPIFFS.pptx  SPIV1 [Autosaved].pptx  SPIV1.pptx  build-script.js  i2c.pptx  readme.md  spi.pptx  wifi mode v1 [Autosaved].pptx  wifi mode v1.pptx  wifi mode.pptx
Test-i2c-u8g2/: Makefile
Test-i2c-u8g2/main/: display.c
_10_gpio/_10_10_Touch/: readme.md
_10_gpio/_10_1_GPIO_Output/: readme.md
_10_gpio/_10_2_Input/: readme.md
_10_gpio/_10_3_Input_interupt/: readme.md
_10_gpio/_10_4_simple_debounce/: readme.md
_10_gpio/_10_5_GPIO_Config/: readme.md  sdkconfig
_10_gpio/_10_6_DAC/: readme.md
_10_gpio/_10_7_PWM_With_LEDC/: readme.md
_10_gpio/_10_8_ADC/: readme.md
_10_gpio/_10_9_hall_sensor/: readme.md
_10_gpio/_7_2_Input_interupt/: readme.md
_11_i2c_spi/11_2_I2C_SSD1306/: CMakeLists.txt  README.md  sdkconfig
_11_i2c_spi/_11_0_bluetooth_serial/: CMakeLists.txt  sdkconfig  sdkconfig_as
_11_i2c_spi/_11_1_I2C_LM75A/: readme.md  sdkconfig
_11_i2c_spi/_11_1_i2C_DS3231/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
_11_i2c_spi/serial_NEO_N8M_GPS/: readme.md
_11_i2c_spi/uart_basic/: readme.md
_11_i2c_spi/uart_pc/: readme.md
_11_i2c_spi/uart_pc_with_queue/: readme.md  (+1 more)
_9_storage/_9_12_SD_SDMMC/main/: CMakeLists.txt  main.c
_9_storage/_9_1_file_in_code_flash/main/: CMakeLists.txt  component.mk  main.c
_9_storage/_9_1_file_in_code_flash/main/files/: index.html  sample.txt
__docker/: dockerfile
(+614 files in other folders)
